new proj/src/objects/GE_ES_Request_Type__c.object
<CustomObject>
    <fields>
        <fullName>CM_U_Oppty_ID__c</fullName>
        <label>CM&amp;U Oppty ID related</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_Number__c</fullName>
        <description>Field on SFDC Opportunity record to show the Kintana CPO Link</description>
        <label>CPO Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ComDiscount_based_on_existing_agrment__c</fullName>
        <label>Com.Discount based on existing agreement</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_EM_Acc_Nm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Request_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_ADN__c</fullName>
        <label>A.D.N</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Name__c</fullName>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Actual_Quote_Answer_Provided_to__c</fullName>
        <label>Actual Quote/Answer Provided to Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Additional_Quote_Details__c</fullName>
        <label>Additional Quote Details:</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Advance_Payment_Details__c</fullName>
        <label>Advance Payment Details</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_AlonRrn_Ep__c</fullName>
        <label>All Non Recurring Expenses</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Alt_Shp_Add__c</fullName>
        <label>Alternate Ship to Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Alternate_Ship_to_Address__c</fullName>
        <label>Alternate Ship-to Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_App_Desc__c</fullName>
        <label>Application Description *</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Application_Description__c</fullName>
        <label>Application Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Application_Requirements__c</fullName>
        <label>Application Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_As_Sold_Cost_Estimate__c</fullName>
        <label>As Sold Cost Estimate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_ES_As_Sold_Hrs_Estimate__c</fullName>
        <label>As Sold Hrs Estimate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_ES_Attach_Desc10__c</fullName>
        <description>Holds the description of the URL which is sent via integration.</description>
        <inlineHelpText>Description of the URL</inlineHelpText>
        <label>Attachment Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Attach_Desc11__c</fullName>
        <description>Holds the description of the URL which is sent via integration.</description>
        <inlineHelpText>Description of the URL</inlineHelpText>
        <label>Attachment Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Attach_Desc12__c</fullName>
        <description>Holds the description of the URL which is sent via integration.</description>
        <inlineHelpText>Description of the URL</inlineHelpText>
        <label>Attachment Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Attachment_URL10__c</fullName>
        <description>This will hold the Attachment used to pass the Attachment url via the Salesforce.com integration.</description>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_Attachment_URL11__c</fullName>
        <description>This will hold the Attachment used to pass the Attachment url via the Salesforce.com integration.</description>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_Attachment_URL12__c</fullName>
        <description>This will hold the Attachment used to pass the Attachment url via the Salesforce.com integration.</description>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_BUC__c</fullName>
        <label>BUC</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bid_Deadline_Date__c</fullName>
        <label>Bid Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GE_ES_Request_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Business_PL__c</fullName>
        <label>Business P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Power Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_CM_break_1__c</fullName>
        <formula>IF( (GE_ES_Tol_Cst_Est__c==0) || (GE_ES_Slpcebrk1__c==0) ,null, (1 - (GE_ES_Tol_Cst_Est__c  /  GE_ES_Slpcebrk1__c  ))*(1/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM%, break 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_CM_break_2__c</fullName>
        <formula>IF(( GE_ES_Tol_Cst_Est__c==0) || (GE_ES_Slpcebrk2__c==0),null, (1 -  (  GE_ES_Tol_Cst_Est__c  /  GE_ES_Slpcebrk2__c ) ) * (1/ 100) )</formula>
        <label>CM%, break 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_CM_break_3__c</fullName>
        <formula>IF( ( GE_ES_Tol_Cst_Est__c==0 ) || (GE_ES_Slpcebrk3__c==0),null, ((1 - (GE_ES_Tol_Cst_Est__c  /  GE_ES_Slpcebrk3__c)) * (1/100)))</formula>
        <label>CM%, break 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_CPO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPO Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Types1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_CPO_Status__c</fullName>
        <description>Field on SFDC Opportunity record to show the Kintana CPO Status</description>
        <label>CPO Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CPOstatus__c</fullName>
        <label>CPO Status</label>
        <picklist>
            <picklistValues>
                <fullName>CPO Creation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price &amp; Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Decision &amp; Order Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM or PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Documents to be Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Manager Final Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Manager Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO Process Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Confirmation &amp; Release Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents Awaiting Customer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing: AE Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing: Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing: Design Engineer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kintana Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPI Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Review Application / Project Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Review Contracts Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Review Project Manager Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Can_This_Request_be_Quoted__c</fullName>
        <label>Can This Request be Quoted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes-Model Number Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-Specification Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-Stock Quote; No Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-DC 24 HR Turnaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Certifications_Hazardous_approvals__c</fullName>
        <label>Certifications/ Hazardous approvals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Compensated_Temperature_Range__c</fullName>
        <label>Compensated Temperature Range</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Contact_for_Quote__c</fullName>
        <label>Customer Contact for Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Currency__c</fullName>
        <label>Customer Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Email__c</fullName>
        <label>Customer Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Phone_Number__c</fullName>
        <label>Customer Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Quote_Due_Date_Time__c</fullName>
        <label>Customer Quote Due Date/Time:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_RFQ_Number__c</fullName>
        <label>Customer RFQ Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Requested_Response_Date__c</fullName>
        <label>Customer Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Rk__c</fullName>
        <formula>GE_ES_Actual_Quote_Answer_Provided_to__c  -   GE_ES_Customer_Quote_Due_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Rk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Segment_primary_decision__c</fullName>
        <label>Customer Segment (primary decision maker</label>
        <picklist>
            <picklistValues>
                <fullName>Production Optimizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Quarterback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Seeker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demanding Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Space_Envelope__c</fullName>
        <label>Customer Space Envelope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Dsgn_Loc__c</fullName>
        <label>Design Location **</label>
        <picklist>
            <picklistValues>
                <fullName>Añasco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changzho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fremont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St.Marys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taunton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tijuana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_EAU_Year_1__c</fullName>
        <label>EAU Year 1*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_EAU_Year_2__c</fullName>
        <label>EAU Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_EAU_Year_3__c</fullName>
        <label>EAU Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Electrical_Connection__c</fullName>
        <label>Electrical Connection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Email_Address_from_Primary_Contact__c</fullName>
        <label>Email Address from Primary Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Engr_LTWek__c</fullName>
        <label>Engineering Leadtime estimate in weeks**</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Enter_Model_Number_s__c</fullName>
        <label>Enter Model Number(s):</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Enter_Serial_Number_s__c</fullName>
        <label>Enter Serial Number(s):</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_EstApp_Eng__c</fullName>
        <label>Estimated Applied Engineering Labour **</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Estimated_Annual_Value_EAV__c</fullName>
        <label>Estimated Annual Value (EAV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Estimated_PO_Date__c</fullName>
        <label>Estimated PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Estimated_Ship_Date_for_Prod_Units__c</fullName>
        <label>Estimated Ship Date for Production Units</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Estyr1sl_val__c</fullName>
        <formula>GE_ES_Qnty_Brk_1__c  *  GE_ES_Slpcebrk1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Year 1 Sales value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_EstyrCM_Val__c</fullName>
        <formula>GE_ES_Estyr1sl_val__c  *  GE_ES_CM_break_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Year 1 CM Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_FFH__c</fullName>
        <inlineHelpText>Factored Fire Hours</inlineHelpText>
        <label>FFH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_FFS__c</fullName>
        <inlineHelpText>Factored Fire Starts</inlineHelpText>
        <label>FFS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Frame__c</fullName>
        <label>Frame</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Gauge_Absolute_Differential__c</fullName>
        <label>Gauge/Absolute/Differential</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Global_Synergy_Account__c</fullName>
        <label>Global/ Synergy Account</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Training Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Training Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Shipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Synergy Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Part Training Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_How_often_would_deliveries_reqrd__c</fullName>
        <label>How often would deliveries be reqrd</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_IB_Pickup_Address__c</fullName>
        <label>IB Pickup Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_IB_Trns_Arrngmt_Pb__c</fullName>
        <label>IB Transport Arrangement  - Paid By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_IB_Trns_Arrngmt__c</fullName>
        <label>IB Transport Arrangement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_INCO_Terms__c</fullName>
        <label>INCO Terms</label>
        <picklist>
            <picklistValues>
                <fullName>SAP: CFR Costs and freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF Costs, insurance &amp; freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP Carriage and insurance paid to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT Carriage paid to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF Delivered at frontier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP Delivered Duty Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU Delivered Duty Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ Delivered ex quay (duty paid)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES Delivered ex ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW Ex Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS Free Alongside Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA Free Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH Free house FOB Free on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN Not Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_IS_Customer_Priority__c</fullName>
        <formula>text( Opportunity__r.Account.GE_HQ_Cust_Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_IS_Motors_Index__c</fullName>
        <formula>Opportunity__r.Account.GE_ES_IS_Motors_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Motors Index#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_IS_Motors_Pricing_Schedule__c</fullName>
        <formula>text(Opportunity__r.Account.GE_ES_IS_Motors_Pricing_Schedule__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Motors Pricing Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_IS_Workflow_Status__c</fullName>
        <label>Workflow Status</label>
        <picklist>
            <picklistValues>
                <fullName>Step1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_I_verify_that_all_required_informa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I verify all required info is included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_I_verify_that_all_required_model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicable checklist items are satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_I_verify_that_all_required_spec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicable checklist items are satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_If_Continuous_prog_what_is_prog_l__c</fullName>
        <label>If Continuous, what is program lifetime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_If_Military_Enter_The_ML_Code__c</fullName>
        <label>If Military Enter The ML Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Important_Job_Instructions__c</fullName>
        <label>Important Job Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Initial_Reviewer__c</fullName>
        <label>Initial Reviewer</label>
        <picklist>
            <picklistValues>
                <fullName>Andrian Kouznetsov - CO2, Hydr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jack Sullivan - Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Gibson - FMG - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Kenney - FMG - AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuan-Dung Luc - FMG - Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrian Kouznetsov - CO2, Hyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Jenney - FMG - AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramesh Rajagopal-FGM-MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sergio Cure - FMG - LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgilio Ramos – FMG – LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diego Gutierrez – FMG – LA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Inquiry_Lvl__c</fullName>
        <label>Inquiry Level *</label>
        <picklist>
            <picklistValues>
                <fullName>Level 2 CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3 CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPI/NTI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Formal Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Request Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Order/ Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Invst_val__c</fullName>
        <label>Investment value **</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Customer_spec_docs_attached__c</fullName>
        <label>Is Customer specification/ docs attached</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>